fix: order image info section mobile display

--- a/src/styles/_info.scss
+++ b/src/styles/_info.scss
@@ -1,16 +1,38 @@
 .info {
   margin-bottom: 5.6vw;
+
+  h2 {
+    text-align: center;
+  } 
   
   &__content {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 3vw;
+    
+    @media (max-width: 768px) {
+      &--image-right {
+        flex-direction: column-reverse;
+
+        img {
+          align-self: flex-end;
+        }
+      }
+
+      &--image-left {
+        flex-direction: column;
+
+        img {
+          align-self: flex-start;
+        }
+      }
+    }
 
     &__text {
       padding: 3vw;
 
-      h2 {
+      h3 {
         margin-bottom: 2vw;
       }
     }
