--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -39,11 +39,21 @@
 
   &__list {
     display: none;
-    
+
     &--is-active {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 2vw;
+
+      @media (max-width: 1024px) {
+        grid-template-columns: repeat(3, 1fr);
+      }
+
+      @media (max-width: 768px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      
     }
 
     &__item {
